# featuretools-sklearn-transformer

./: MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.circleci/: config.yml
.github/workflows/: release.yaml  tests.yml
featuretools_sklearn_transformer/: __init__.py  transformer.py
featuretools_sklearn_transformer/tests/: test_transformer.py
