[tool:pytest]
python_files = featuretools_sklearn_transformer/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
exclude = docs/*
ignore = E501,W504
[metadata]
description-file = README.md
[aliases]
test=pytest
[isort]
forced_separate=featuretools_sklearn_transformer
multi_line_output=3
